@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.14 2002/09/04 01:23:26 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.15 2002/09/04 01:26:43 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1292,3 +1292,8 @@ sys/nfs/nfs_socket.c				1.75
 lib/libc/net/inet_ntop.c			1.11-1.12
   be more picky about string buffer manipulation.  hints from freebsd.
   correct snprintf return value handling.
+
+lib/libc/net/res_mkquery.c			1.22
+  correct bad practice in the code - it uses two changing variables
+  to manage buffer (buf and buflen).  we eliminate buflen and use
+  fixed point (ep) as the ending pointer.
